# eagleimp

./: Dockerfile  README.md  extract_summary.awk  extract_summary_yaml.awk  launch_eagleimp  mergeX_info_yaml.awk  mergeX_message_yaml.awk  qref_spec.md
.github/workflows/: docker-main.yml
example/: 22.example.ref.vcf.gz.csi  22.example.vcf.gz.csi  genetic_map_hg19_chr22.txt
src/: Args.cpp  Args.h  Beam.cpp  Beam.h  BeamPath.cpp  BeamPath.h  BooleanHistory.cpp  BooleanHistory.h  CMakeLists.txt  Datatypes.cpp  Datatypes.h  FPGAConfigurationEagleImp.cpp  FPGAConfigurationEagleImp.h  FPGAHandler.cpp  FPGAHandler.h  GPUEngine.cu  GPUEngine.h  GPUHandler.cpp  GPUHandler.h  GPUKernels.cu  GPUKernels.h  HaplotypeHistory.h  HaplotypePath.cpp  HaplotypePath.h  History.h  MapInterpolater.cpp  MapInterpolater.h  MinMaxHeap.h  MyMalloc.h  PBWT.cpp  PBWT.h  PBWTImputer.cpp  PBWTImputer.h  PBWTInterval.h  PBWTPhaser.cpp  PBWTPhaser.h  RingBuffer.cpp  RingBuffer.h  StatusFile.h  Stopwatch.cpp  (+13 more)
src/CMakeModules/: FindADMXRC3.cmake  FindHTSlib.cmake  FindNVML.cmake
src/hybridsys/: Buffer.h  BufferAllocator.h  BufferFactory.h  Device.h  DeviceCategory.cpp  DeviceCategory.h  FPGA.cpp  FPGA.h  GPU.cpp  GPU.h  Hybridsys.cpp  Hybridsys.h  Spinlock.h  ThreadUtils.cpp  ThreadUtils.h
